# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  gendiff  gendiff_1  pyproject.toml  setup.cfg
.github/workflows/: codeclimate.yml
gendiff/: check.py  cli.py  diff.py  generate_diff.py  get_diff_json.py  get_diff_yaml.py  load.py  make_diff.py  open_files.py  parse.py
gendiff/formaters/: formaters.py  json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  formatters.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff  gendiff.py  gendiff_script.py
tests/: test_formatters.py  test_gendiff.py  test_generate_diff.py  test_get_diff_json.py  test_get_diff_yaml.py  test_json.py  test_make_diff.py  test_plain.py  test_stylish.py
tests/fixtures/: diff_first_result.txt  diff_second_result.txt  json_diff_first_result.txt  json_diff_second_result.txt  json_first_result.json  json_result_file.txt  json_second_result.json  plain_first_result.txt  stylish_second_result.txt  yaml_diff_first_result.txt  yaml_diff_second_result.txt
