[tool.poetry]
name = "hexlet-code"
version = "0.2.1"
description = ""
authors = ["a-yanovskiy <a.e.yanovskiy@gmail.com>"]
packages = [
  { include = "hexlet-code" },
]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.0.1"
PyYAML = "^5.4.1"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
autopep8 = "^1.5.7"
yapf = "^0.32.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
